--- a/src/js/themes/arctic/css/metacatui.css
+++ b/src/js/themes/arctic/css/metacatui.css
@@ -285,6 +285,12 @@
 .PortalView #Navbar .minimal-nav .btn-primary{
 	color: #FFF;
 }
+
+.Portal.Editor .header #inner-header,
+.PortalView .header #inner-header {
+  margin-right: 1rem;
+}
+
 .header .login.btn{
 	margin-left: 20px;
 	width: auto;
@@ -572,6 +578,7 @@ footer .logos a:hover, a:focus{
   height: 20px;
   width: 20px;
   background-size: contain;
+  margin-top: 4px;
 }
 .Portal.Editor #Navbar #logo::after,
 .PortalView #Navbar #logo::after{
@@ -579,7 +586,7 @@ footer .logos a:hover, a:focus{
   order: 3;
   margin-left: 29px;
   display: block;
-  margin-top: 2px;
+  margin-top: 3px;
   color: #888;
   font-size: .8em;
   white-space: nowrap;
@@ -606,6 +613,26 @@ footer .logos a:hover, a:focus{
   font-family: inherit;
 }
 
+.Portal.Editor .header #nav-trigger,
+.PortalView .header #nav-trigger {
+  margin: 0;
+}
+
+/* Sign in button... */
+.Portal.Editor #Navbar .nav .minimal-nav a.login,
+.PortalView #Navbar .nav .minimal-nav a.login {
+  padding: 0.3rem 0.5rem;
+  margin: 0.15rem 0 0 0;
+  display: flex;
+}
+.Portal.Editor #Navbar .nav .minimal-nav a.login > .icon,
+.PortalView #Navbar .nav .minimal-nav a.login > .icon {
+  display: block;
+}
+.Portal.Editor #Navbar .nav .minimal-nav a.login > span,
+.PortalView #Navbar .nav .minimal-nav a.login > span {
+  top: 0;
+}
 
 .port-editor-sections .section-link-container.sortable-ghost,
 .port-editor-sections .section-link-container.sortable-chosen {
